force-app/main/default/objects/CustomerInforDMS__c/CustomerInforDMS__c.object-meta.xml
<CustomObject>
    <label>CustomerInforDMS</label>
    <nameField>
        <label>CustomerInforDMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerInforDMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>