force-app/main/default/objects/CustomerInforDMS__c/fields/ConsumerType__c.field-meta.xml
<CustomField>
    <fullName>ConsumerType__c</fullName>
    <label>ConsumerType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>