force-app/main/default/objects/CustomerInforDMS__c/fields/CreateDateDMS__c.field-meta.xml
<CustomField>
    <fullName>CreateDateDMS__c</fullName>
    <label>CreateDate DMS</label>
    <type>Date</type>
</CustomField>