force-app/main/default/objects/CustomerInforDMS__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <externalId>true</externalId>
    <label>CustomerId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>