force-app/main/default/objects/CustomerInforDMS__c/fields/DistrictCode__c.field-meta.xml
<CustomField>
    <fullName>DistrictCode__c</fullName>
    <label>DistrictCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>