force-app/main/default/objects/CustomerInforDMS__c/fields/IdNo__c.field-meta.xml
<CustomField>
    <fullName>IdNo__c</fullName>
    <label>IdNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>