force-app/main/default/objects/CustomerInforDMS__c/fields/JobTittle__c.field-meta.xml
<CustomField>
    <fullName>JobTittle__c</fullName>
    <label>JobTittle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>