force-app/main/default/objects/CustomerInforDMS__c/fields/LastModifyDMS__c.field-meta.xml
<CustomField>
    <fullName>LastModifyDMS__c</fullName>
    <label>LastModifyDMS</label>
    <type>Date</type>
</CustomField>