force-app/main/default/objects/CustomerInforDMS__c/fields/Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Mobile2__c</fullName>
    <label>Mobile2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>