force-app/main/default/objects/CustomerInforDMS__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>OrderType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>