force-app/main/default/objects/CustomerInforDMS__c/fields/PointCode__c.field-meta.xml
<CustomField>
    <fullName>PointCode__c</fullName>
    <label>PointCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>