force-app/main/default/objects/CustomerInforDMS__c/fields/ProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ProvinceCode__c</fullName>
    <label>ProvinceCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>