force-app/main/default/objects/CustomerInforDMS__c/fields/ProvinceName__c.field-meta.xml
<CustomField>
    <fullName>ProvinceName__c</fullName>
    <label>ProvinceName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>